--- a/lib/personal_yt_dlp_web/live/download_live/index.html.heex
+++ b/lib/personal_yt_dlp_web/live/download_live/index.html.heex
@@ -1,16 +1,20 @@
 <main>
   <.live_component module={FormComponent} id="form-comp" form={@form}></.live_component>
-  <div class="mt-20 flex flex-col p-2 gap-10 bg-red-50">
+  <div class="mt-20 flex flex-col p-2 gap-2">
     <%= for download <- @downloads do %>
-      <div>
-        <div><%= download.title %> - <%= download.link %></div>
-
+      <div class="flex gap-4 h-32 p-2 border-slate-200 border-2 rounded-md shadow-sm transition ease-in-out hover:shadow-lg hover:bg-slate-50/75 hover:scale-105">
         <div>
-          <%= if download.is_downloaded do %>
-            TRUE
-          <% else %>
-            FALSE
-          <% end %>
+          <img src={download.thumbnail} alt="image thumbnail" class="h-full rounded" />
+        </div>
+        <div class="flex flex-col">
+          <h3 class="font-semibold"><%= download.title %></h3>
+          <div>
+            <%= if download.is_downloaded do %>
+              TRUE
+            <% else %>
+              FALSE
+            <% end %>
+          </div>
         </div>
       </div>
       <%!-- <% end %> --%>
